Support Hero List in Configuration file.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@65 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="ComponentModel\BindableObject.cs" />
     <Compile Include="ComponentModel\ViewModelBase.cs" />
+    <Compile Include="Controls\MinesPanel.cs" />
     <Compile Include="Dialogs\OptionDialog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
