1. Add more options. 2. Add Separator Style.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@71 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine/ClearMine.csproj
+++ b/ClearMine/ClearMine.csproj
@@ -106,6 +106,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Properties\Settings.cs" />
+    <Compile Include="Media\Player.cs" />
     <Compile Include="UI\Controls\MineCellControl.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
