--- a/ClearMine/app.config
+++ b/ClearMine/app.config
@@ -28,15 +28,27 @@
                             <records />
                         </heroOnLevel>
                         <heroOnLevel level="interMediate" played="0" won="0" longestWinning="0"
-                                     longestLosing="0" current="0" average="0">
+                            longestLosing="0" current="0" average="0">
                             <records />
                         </heroOnLevel>
                         <heroOnLevel level="advanced" played="0" won="0" longestWinning="0"
-                                     longestLosing="0" current="0" average="0">
+                            longestLosing="0" current="0" average="0">
                             <records />
                         </heroOnLevel>
                     </heroList>
                 </value>
+            </setting>
+            <setting name="PlaySound" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ShowQuestionMark" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="SaveOnExit" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AutoContinueSaved" serializeAs="String">
+                <value>False</value>
             </setting>
         </ClearMine.Properties.Settings>
     </userSettings>
