1. Support Animation. 2. Refine caching logic.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@73 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Logic/ClearMine.Logic.csproj
+++ b/ClearMine.Logic/ClearMine.Logic.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CellState.cs" />
+    <Compile Include="CellStateChangedEventArgs.cs" />
     <Compile Include="ClearMineGame.cs" />
     <Compile Include="ExpandFailedException.cs" />
     <Compile Include="GameState.cs" />
