--- a/ClearMine/ClearMine.csproj
+++ b/ClearMine/ClearMine.csproj
@@ -112,6 +112,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="UI\Converters\CacheStateToVisibilityConverter.cs" />
     <Compile Include="UI\Converters\DifficultyToBooleanConverter.cs" />
     <Compile Include="UI\Dialogs\AboutDialog.xaml.cs">
       <DependentUpon>AboutDialog.xaml</DependentUpon>
