--- a/ClearMine/Properties/Settings.settings
+++ b/ClearMine/Properties/Settings.settings
@@ -41,5 +41,8 @@
     <Setting Name="AutoContinueSaved" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="PlayAnimation" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
