--- a/ClearMine/app.config
+++ b/ClearMine/app.config
@@ -50,6 +50,9 @@
             <setting name="AutoContinueSaved" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="PlayAnimation" serializeAs="String">
+                <value>True</value>
+            </setting>
         </ClearMine.Properties.Settings>
     </userSettings>
 </configuration>
