1. Confirm when new game. 2. Statistics on game gives up. 3. Support Save/Load game and configuration support.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@75 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -71,6 +71,7 @@
     <Compile Include="ComponentModel\CachedObservableCollection.cs" />
     <Compile Include="ComponentModel\CachingState.cs" />
     <Compile Include="ComponentModel\ICachable.cs" />
+    <Compile Include="ComponentModel\IUpdatable.cs" />
     <Compile Include="ComponentModel\ViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\GenericExtension.cs" />
