--- a/ClearMine/app.config
+++ b/ClearMine/app.config
@@ -53,6 +53,15 @@
             <setting name="PlayAnimation" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="AlwaysNewGame" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SaveGame" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="GameHistoryFolder" serializeAs="String">
+                <value>.</value>
+            </setting>
         </ClearMine.Properties.Settings>
     </userSettings>
 </configuration>
