1. Refactoring MineCellControl to make it common use. 2. Take a screen shoot when win.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@77 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -97,8 +97,11 @@
   <ItemGroup>
     <Compile Include="Behaviors\SortableListViewBehavior.cs" />
     <Compile Include="Controls\ListSortDecorator.cs" />
+    <Compile Include="Controls\MineCellControl.cs" />
     <Compile Include="Controls\MinesPanel.cs" />
     <Compile Include="Controls\VisualAdorner.cs" />
+    <Compile Include="Converters\CacheStateToVisibilityConverter.cs" />
+    <Compile Include="Converters\MathOperationConverter.cs" />
     <Compile Include="Dialogs\OptionDialog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
