--- a/ClearMine/app.config
+++ b/ClearMine/app.config
@@ -64,4 +64,13 @@
             </setting>
         </ClearMine.Properties.Settings>
     </userSettings>
+    <system.diagnostics>
+        <trace autoflush="true">
+            <listeners>
+                <add name="redirectListener"
+                     type="ClearMine.Common.Log.RedirectorTraceListener, ClearMine.Common"
+                     traceOutputOptions="DateTime" />
+            </listeners>
+        </trace>
+    </system.diagnostics>
 </configuration>
