--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -99,8 +99,10 @@
     <Compile Include="Controls\ListSortDecorator.cs" />
     <Compile Include="Controls\MineCellControl.cs" />
     <Compile Include="Controls\MinesPanel.cs" />
+    <Compile Include="Controls\NumberPresenter.cs" />
     <Compile Include="Controls\VisualAdorner.cs" />
     <Compile Include="Converters\CacheStateToVisibilityConverter.cs" />
+    <Compile Include="Converters\LightUpsToBooleanConverter.cs" />
     <Compile Include="Converters\MathOperationConverter.cs" />
     <Compile Include="Dialogs\OptionDialog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
