Create XP style number presenter control.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@79 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Behaviors\SortableListViewBehavior.cs" />
+    <Compile Include="Controls\ElectronicNumber.cs" />
     <Compile Include="Controls\ListSortDecorator.cs" />
     <Compile Include="Controls\MineCellControl.cs" />
     <Compile Include="Controls\MinesPanel.cs" />
