--- a/ClearMine/app.config
+++ b/ClearMine/app.config
@@ -2,11 +2,11 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="ClearMine.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="ClearMine.Common.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
-        <ClearMine.Properties.Settings>
+        <ClearMine.Common.Properties.Settings>
             <setting name="Difficulty" serializeAs="String">
                 <value>Beginner</value>
             </setting>
@@ -62,7 +62,7 @@
             <setting name="GameHistoryFolder" serializeAs="String">
                 <value>.</value>
             </setting>
-        </ClearMine.Properties.Settings>
+        </ClearMine.Common.Properties.Settings>
     </userSettings>
     <system.diagnostics>
         <trace autoflush="true">
