--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -96,11 +96,25 @@
     <Compile Include="ComponentModel\ICachable.cs" />
     <Compile Include="ComponentModel\IUpdatable.cs" />
     <Compile Include="ComponentModel\ViewModelBase.cs" />
+    <Compile Include="Difficulty.cs" />
+    <Compile Include="HeroHistory.cs" />
     <Compile Include="Log\RedirectorTraceListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <DependentUpon>Settings.settings</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
     <Compile Include="Utilities\GenericExtension.cs" />
     <Compile Include="Utilities\Util.cs" />
     <Compile Include="Utilities\Win32.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
