--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -96,6 +96,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Behaviors\SortableListViewBehavior.cs" />
+    <Compile Include="Commands\CommandsHelper.cs" />
+    <Compile Include="Commands\OptionsCommands.cs" />
+    <Compile Include="Commands\StatisticsCommands.cs" />
     <Compile Include="Controls\ElectronicNumber.cs" />
     <Compile Include="Controls\ListSortDecorator.cs" />
     <Compile Include="Controls\MineCellControl.cs" />
@@ -103,9 +106,11 @@
     <Compile Include="Controls\NumberPresenter.cs" />
     <Compile Include="Controls\VisualAdorner.cs" />
     <Compile Include="Converters\CacheStateToVisibilityConverter.cs" />
+    <Compile Include="Converters\DifficultyToBooleanConverter.cs" />
     <Compile Include="Converters\LightUpsToBooleanConverter.cs" />
     <Compile Include="Converters\MathOperationConverter.cs" />
     <Compile Include="Dialogs\OptionDialog.cs" />
+    <Compile Include="Media\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
